--- a/style.css
+++ b/style.css
@@ -52,25 +52,46 @@ img {
 }
 
 .line {
-    clear: both;
     display: flex;
+    flex-wrap: wrap;
     margin: 0.5rem;
+    justify-content: space-evenly;
 }
 
-.foot {
-    background: linear-gradient(rgba(122, 120, 172, 0.8),rgba(122, 120, 172, 0.8)), no repeat center/cover url('starter_files/images/donate.jpg');
-    max-width: 200px;
-    display: inline-block;
+footer {
+    display:flex;
+    flex-wrap: wrap;
+    margin: 0.5rem;
+    justify-content: space-evenly;
+}
+
+.footer {
+    width: 33%;
+    height: 400px;
+    font-family: "oswald";
+    color: white;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center {
+    text-align: center;
+    padding: 50% 50%;
+}
+
+.foot1 {
+    background: linear-gradient(rgba(122,120,172,0.5),rgba(122,120,172,0.5)),
+                no-repeat center/cover url(starter_files/images/donate.jpg);
 }
 
 .foot2 {
-    background: linear-gradient(rgba(122, 120, 172, 0.8),rgba(122, 120, 172, 0.8)), no repeat center/cover url('starter_files/images/volunteer.jpg');
-    max-width: 200px;
-    display: inline-block;
+    background: linear-gradient(rgba(122,120,172,0.5),rgba(122,120,172,0.5)),
+                no-repeat center/cover url(starter_files/images/volunteer.jpg);
 }
 
 .foot3 {
-    background: linear-gradient(rgba(122, 120, 172, 0.8),rgba(122, 120, 172, 0.8)), no repeat center/cover url('starter_files/images/location.pngs');
-    max-width: 200px;
-    display: inline-block;  
+    background: linear-gradient(rgba(122,120,172,0.5),rgba(122,120,172,0.5)),
+                no-repeat center/cover url(starter_files/images/location.png);
 }
